tests/baselines/reference/parserES5ComputedPropertyName8.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName8.ts(1,10): error TS1161: Computed property names are not allowed in interfaces or type literals.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName8.ts (1 errors) ====
    var v: { [e]: number };
             ~~~
!!! error TS1161: Computed property names are not allowed in interfaces or type literals.